[features]: changed mappings, added modified date partitions to take latest data on duplicates.

--- a/environments/Production-2.yml
+++ b/environments/Production-2.yml
@@ -4,6 +4,9 @@ mappingDefinitions:
   CALENDARS_FOR_FINANCE_AND_ANALYTICS:
     database: CALENDARS_FOR_FINANCE_AND_ANALYTICS
     schema: PUBLIC
+  MISC_PREPARED:
+    database: PINSLY_PREPARED_PROD
+    schema: MISC_PREPARED
   NETSUITE_PREPARED:
     database: PINSLY_PREPARED_PROD
     schema: NETSUITE_PREPARED
