--- a/locations.yml
+++ b/locations.yml
@@ -2,6 +2,7 @@ defaultStorageMapping: NETSUITE_RAW
 fileVersion: 1
 locations:
   - CALENDARS_FOR_FINANCE_AND_ANALYTICS
+  - MISC_PREPARED
   - NETSUITE_PREPARED
   - NETSUITE_RAW
   - OPERATIONS_MODEL_PREPARED
