--- a/nodes/SHAREPOINT_RAW-STORAGE_BUDGET.yml
+++ b/nodes/SHAREPOINT_RAW-STORAGE_BUDGET.yml
@@ -1,6 +1,6 @@
 fileVersion: 1
-id: a3cd4e7f-b0df-45cd-997e-dbed8869b4ef
-name: FREIGHT_BUDGET
+id: f699cc4e-786d-4782-acad-c32acdc7c29a
+name: STORAGE_BUDGET
 operation:
   database: ""
   dataset: ""
@@ -14,13 +14,13 @@ operation:
           values: []
         appliedColumnTests: {}
         columnReference:
-          columnCounter: 57f0740a-1193-4778-ad97-84cfb0bd1078
-          stepCounter: a3cd4e7f-b0df-45cd-997e-dbed8869b4ef
+          columnCounter: 18edfa8a-ec2c-42a9-8da1-c930e40fee0f
+          stepCounter: f699cc4e-786d-4782-acad-c32acdc7c29a
         config: {}
-        dataType: VARCHAR(16777216)
+        dataType: FLOAT
         defaultValue: ""
         description: ""
-        name: BUDGET_TYPE
+        name: CAR_DAYS
         nullable: true
         primaryKey: false
         sourceColumnReferences:
@@ -33,8 +33,27 @@ operation:
           values: []
         appliedColumnTests: {}
         columnReference:
-          columnCounter: d4f19a5b-ccac-40ca-a4f4-6638a95f1146
-          stepCounter: a3cd4e7f-b0df-45cd-997e-dbed8869b4ef
+          columnCounter: ca762db4-e387-4444-be5f-6806263b5f21
+          stepCounter: f699cc4e-786d-4782-acad-c32acdc7c29a
+        config: {}
+        dataType: VARCHAR(16777216)
+        defaultValue: ""
+        description: ""
+        name: CHARGE_TYPE
+        nullable: true
+        primaryKey: false
+        sourceColumnReferences:
+          - columnReferences: []
+            transform: ""
+        transform: ""
+        uniqueKey: false
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: 351e663f-db90-4c91-aec5-8fbcc1815f3f
+          stepCounter: f699cc4e-786d-4782-acad-c32acdc7c29a
         config: {}
         dataType: VARCHAR(16777216)
         defaultValue: ""
@@ -52,8 +71,27 @@ operation:
           values: []
         appliedColumnTests: {}
         columnReference:
-          columnCounter: 7083051a-6448-4bfe-a66e-6ad18d5aafbc
-          stepCounter: a3cd4e7f-b0df-45cd-997e-dbed8869b4ef
+          columnCounter: bd5b8f59-687f-4d02-a577-7e52374e4449
+          stepCounter: f699cc4e-786d-4782-acad-c32acdc7c29a
+        config: {}
+        dataType: VARCHAR(16777216)
+        defaultValue: ""
+        description: ""
+        name: EMPTY_LOADED
+        nullable: true
+        primaryKey: false
+        sourceColumnReferences:
+          - columnReferences: []
+            transform: ""
+        transform: ""
+        uniqueKey: false
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: 65ed8c4b-0f3c-4ee7-93be-5e17e347203a
+          stepCounter: f699cc4e-786d-4782-acad-c32acdc7c29a
         config: {}
         dataType: VARCHAR(16777216)
         defaultValue: ""
@@ -71,84 +109,8 @@ operation:
           values: []
         appliedColumnTests: {}
         columnReference:
-          columnCounter: 137c89fb-978e-4702-a035-3917525d61fd
-          stepCounter: a3cd4e7f-b0df-45cd-997e-dbed8869b4ef
-        config: {}
-        dataType: VARCHAR(16777216)
-        defaultValue: ""
-        description: ""
-        name: PATRON_ID
-        nullable: true
-        primaryKey: false
-        sourceColumnReferences:
-          - columnReferences: []
-            transform: ""
-        transform: ""
-        uniqueKey: false
-      - acceptedValues:
-          strictMatch: true
-          values: []
-        appliedColumnTests: {}
-        columnReference:
-          columnCounter: 5ca9a11b-9cd8-40a9-8825-7824e12d2e55
-          stepCounter: a3cd4e7f-b0df-45cd-997e-dbed8869b4ef
-        config: {}
-        dataType: VARCHAR(16777216)
-        defaultValue: ""
-        description: ""
-        name: SUBSIDIARY
-        nullable: true
-        primaryKey: false
-        sourceColumnReferences:
-          - columnReferences: []
-            transform: ""
-        transform: ""
-        uniqueKey: false
-      - acceptedValues:
-          strictMatch: true
-          values: []
-        appliedColumnTests: {}
-        columnReference:
-          columnCounter: 7f3d0662-5bf8-41e5-86f0-7880cff2ed1f
-          stepCounter: a3cd4e7f-b0df-45cd-997e-dbed8869b4ef
-        config: {}
-        dataType: NUMBER(38,0)
-        defaultValue: ""
-        description: ""
-        name: YEAR
-        nullable: true
-        primaryKey: false
-        sourceColumnReferences:
-          - columnReferences: []
-            transform: ""
-        transform: ""
-        uniqueKey: false
-      - acceptedValues:
-          strictMatch: true
-          values: []
-        appliedColumnTests: {}
-        columnReference:
-          columnCounter: 4670ee78-237b-4e1c-be63-0b3ee604964e
-          stepCounter: a3cd4e7f-b0df-45cd-997e-dbed8869b4ef
-        config: {}
-        dataType: FLOAT
-        defaultValue: ""
-        description: ""
-        name: CARLOADS
-        nullable: true
-        primaryKey: false
-        sourceColumnReferences:
-          - columnReferences: []
-            transform: ""
-        transform: ""
-        uniqueKey: false
-      - acceptedValues:
-          strictMatch: true
-          values: []
-        appliedColumnTests: {}
-        columnReference:
-          columnCounter: 58fbc24e-2bee-4f3c-8143-895be1ff81da
-          stepCounter: a3cd4e7f-b0df-45cd-997e-dbed8869b4ef
+          columnCounter: ef4cb527-26b9-4194-962d-c7732f6f854c
+          stepCounter: f699cc4e-786d-4782-acad-c32acdc7c29a
         config: {}
         dataType: VARCHAR(16777216)
         defaultValue: ""
@@ -166,13 +128,13 @@ operation:
           values: []
         appliedColumnTests: {}
         columnReference:
-          columnCounter: 7a5daa0a-a2c1-4209-9be7-be65325dfb0b
-          stepCounter: a3cd4e7f-b0df-45cd-997e-dbed8869b4ef
+          columnCounter: 4bbb84f2-767a-418c-91eb-179c2ba4cec0
+          stepCounter: f699cc4e-786d-4782-acad-c32acdc7c29a
         config: {}
-        dataType: FLOAT
+        dataType: VARCHAR(16777216)
         defaultValue: ""
         description: ""
-        name: RATE_PER_CAR
+        name: PATRON_ID
         nullable: true
         primaryKey: false
         sourceColumnReferences:
@@ -185,13 +147,70 @@ operation:
           values: []
         appliedColumnTests: {}
         columnReference:
-          columnCounter: 96145c9f-50b6-4452-bd88-3650e782d166
-          stepCounter: a3cd4e7f-b0df-45cd-997e-dbed8869b4ef
+          columnCounter: ef7b72b6-9b73-4f15-ab1a-d86f45f3789c
+          stepCounter: f699cc4e-786d-4782-acad-c32acdc7c29a
         config: {}
         dataType: FLOAT
         defaultValue: ""
         description: ""
-        name: REVENUE
+        name: RATE_PER_DAY
+        nullable: true
+        primaryKey: false
+        sourceColumnReferences:
+          - columnReferences: []
+            transform: ""
+        transform: ""
+        uniqueKey: false
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: 0f8488cd-20f8-4917-8b85-11a8b6e449a1
+          stepCounter: f699cc4e-786d-4782-acad-c32acdc7c29a
+        config: {}
+        dataType: FLOAT
+        defaultValue: ""
+        description: ""
+        name: STORAGE_REVENUE
+        nullable: true
+        primaryKey: false
+        sourceColumnReferences:
+          - columnReferences: []
+            transform: ""
+        transform: ""
+        uniqueKey: false
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: d9c39040-f2dc-42a6-a24c-336e58b67d1a
+          stepCounter: f699cc4e-786d-4782-acad-c32acdc7c29a
+        config: {}
+        dataType: VARCHAR(16777216)
+        defaultValue: ""
+        description: ""
+        name: SUBSIDIARY
+        nullable: true
+        primaryKey: false
+        sourceColumnReferences:
+          - columnReferences: []
+            transform: ""
+        transform: ""
+        uniqueKey: false
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: ea7572c2-7a30-46e6-92a4-6c2775615156
+          stepCounter: f699cc4e-786d-4782-acad-c32acdc7c29a
+        config: {}
+        dataType: NUMBER(38,0)
+        defaultValue: ""
+        description: ""
+        name: YEAR
         nullable: true
         primaryKey: false
         sourceColumnReferences:
@@ -200,11 +219,11 @@ operation:
         transform: ""
         uniqueKey: false
     join:
-      joinCondition: FROM {{ ref('SHAREPOINT_RAW', 'FREIGHT_BUDGET') }}
-  name: FREIGHT_BUDGET
+      joinCondition: FROM {{ ref('SHAREPOINT_RAW', 'STORAGE_BUDGET') }}
+  name: STORAGE_BUDGET
   schema: ""
   sqlType: Source
-  table: FREIGHT_BUDGET
+  table: STORAGE_BUDGET
   type: sourceInput
   version: 1
 type: Node
